client/src/styles/DragDropTest.css
.days-cols {
  display: flex;
  flex-direction: row;
  justify-content: space-around;

}

.day-col {
  border: solid 1px #000000;
  height: 50vh;
  width: 20vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.time-labels {
    height: 100%;
  overflow: scroll;
  margin: 20;
}

.time-label {
  width: 100%;
  display: flex;
}

.activity-options{
    height: 50px;
    overflow: scroll;
    width: max-content;
    background-color: rgb(46, 199, 115);
}

.activity-section{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.draggable-div {
  background-color: rgb(46, 199, 115);
  height: 50px;
  width: 80%;
  margin-top: 10px;
  margin-bottom: 10px;
}

.timeslot {
  width: 100%;
  height: 30px;
  border:#000000 solid 1px;
}

.day-column {
    position: relative;
    width: 200px;
    border: 1px solid #ccc;
    margin: 10px;
}

.day-grid {
    position: relative;
    height: 1440px; /* 10px * 144 intervals */
    background: #f9f9f9;
}

.time-cell {
    height: 10px;
    font-size: 10px;
    border-bottom: 1px solid #eee;
}

.event-block {
    position: absolute;
    background: rgba(0, 120, 255, 0.4);
    border: 1px solid #007bff;
    box-sizing: border-box;
    width: 100%;
    overflow: hidden;
}

